--- a/pages/index.css
+++ b/pages/index.css
@@ -196,3 +196,44 @@
 
   
   }
+  .form {
+    display: none; /* Hide the form by default */
+    position: fixed; /* Make the form fixed */
+    top: 50%; /* Center the form vertically */
+    left: 50%; /* Center the form horizontally */
+    transform: translate(-50%, -50%); /* Translate the form to the center */
+    background-color: white; /* Set the background color of the form */
+    padding: 20px; /* Add some padding to the form */
+    box-shadow: 0px 0px 10px #ccc; /* Add a shadow to the form */
+    border-radius: 10px; /* Round the corners of the form */
+  }
+
+  .form__title {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+  }
+
+  .form__elements {
+    
+  }
+  .form__username {
+
+  }
+  .form__info {
+    margin-bottom: 20px; /* Add some margin at the bottom of each input field */
+        /* padding: 10px; /* Add some padding to each input field */
+        width: 100%; /* Make each input field 100% wide */
+        border-radius: 5px; /* Round the corners of each input field */
+        border: 1px solid #ccc; /* Add a border to each input field */
+  } */
+  /* .form__save_btn { */
+    background-color: black; /* Set the background color of the save button */
+        color: white; /* Set the text color of the save button */
+        padding: 10px 20px; /* Add some padding to the save button */
+        border-radius: 5px; /* Round the corners of the save button */
+        border: none; /* Remove the border from the save button */
+        cursor: pointer; /* Change the cursor to a pointer when hovering over the save button */
+      
+  }  */
