--- a/pages/index.css
+++ b/pages/index.css
@@ -358,10 +358,11 @@
   }
   @media only screen and (max-width: 543px) {
   .header{
-    margin: 28px 0 0 27px;
+    margin: 28px 0 0;
   }
   .header__logo{ 
-    margin: 0 0 32px;
+    margin: 0 0 32px 27px;
+    max-width: 130px;
   }
     .profile {
     flex-direction: column;
