--- a/pages/index.css
+++ b/pages/index.css
@@ -410,6 +410,15 @@
     gap: 20px;
     margin: 0 4% 50px;
     }
+    .footer{
+      margin: 0 0 36px;
+    }
+    }
+    .footer__text{
+      margin: 0 0 0 3%; 
+      font-size: 14px;
+      line-height: 17px;
+    }
 
 
   }
