--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,6 @@
   
 
 } 
-/* Page */
 .page {
     background-color: #000000;
     font-family: "Inter", sans-serif;
@@ -13,17 +12,16 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-
     margin: 0 auto;
   }
   
-  /* Header */
+
   .header {
     max-width: 880px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 45px;
+    margin: 45px auto 5px;
   }
   
   .header__logo {
@@ -38,12 +36,12 @@
     border: 1px solid #545454;
   }
   
-  /* Profile */
+
   .profile {
     display: flex;
     width: 100%;
     max-width: 880px;
-    margin-bottom: 46px;
+    margin-bottom: 30px;
    
   }
   
@@ -67,17 +65,13 @@
   }
   .profile__name {
 
-
-    font-size: 20px;
-    font-weight: bold;
     padding-left: 20px;
-    /* font-family: 'Inter'; */
-    /* font-style: normal; */
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
     margin: 0 0 16px
   }
+  
   .add {
     display: flex;
     flex-direction: column;
@@ -421,5 +415,5 @@
     }
 
 
-  }
+  
   
