--- a/pages/index.css
+++ b/pages/index.css
@@ -336,14 +336,34 @@
       margin-bottom: 32px;
    }
     .profile {
-      padding-left: 5%;
-    
+      flex-direction: column;
+   padding: 0;
+    flex-wrap: wrap;
     }
     .profile__info {
       margin-top: 40px;
+      display: flex;
+    flex-direction: column;
+    align-items: center;
     }
     .profile__name {
       font-size: 32px;
+      padding: 0;
+    }
+    .profile__picture {
+      align-self: center;
+    }
+    .profile__edit_btn{
+      height: 24px;
+    margin-top: 10px;
+    margin-left: 18px;
+    }
+    .add {
+
+      margin: 36px 0 0;
+    background-image: url(/images/addButtonMobile.png);
+    min-width: 282px;
+
     }
     .cards {
       display: grid;
@@ -368,6 +388,9 @@
 .form__close-btn{
   top: 10%;
   right: 9%;
+}
+.footer__text{
+  margin-left: 3%;
 }
 
   
