--- a/pages/index.css
+++ b/pages/index.css
@@ -92,6 +92,7 @@
   .add:hover{
     opacity: 0.6;
   }
+  
  
   
   .profile__edit_btn {
@@ -159,19 +160,44 @@
     color:black;
   }
   
-  .card__like_btn{
+  /* .card__like_btn{
     color: black;
+    background-color: inherit;
+    border: none;
+  } */
+
+  .card__like_btn-off{
+    width: 21px;
+    height: 19px;
+    color: black;
+    background-image: url(/images/like.png);
+    color: black;
+    background-color: inherit;
+    border: none;
   }
-  .card__like_btn:hover{
+
+  .card__like_btn-on{
+    width: 21px;
+    height: 19px;
+    color: black;
+    background-image: url(/images/blackheart.png);
+    color: black;
+    background-color: inherit;
+    border: none;
+  }
+  .card__like_btn-on:hover{
     opacity: 0.5;
     cursor: pointer;
   }
-
-  .card__like {
+  .card__like_btn-off:hover{
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  /* .card__like {
     width: 21px;
    
     color: black;
-  }
+  } */
 
   .footer{
     display:flex;
