--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,4 @@
- /* *{
-  border: 1px solid red;
-  
-
-}  */
+ 
 .page {
     background-color: #000000;
     font-family: "Inter", sans-serif;
@@ -42,6 +38,7 @@
     width: 100%;
     max-width: 880px;
     margin-bottom: 30px;
+    position: relative;
    
   }
   
@@ -60,6 +57,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 60px;
+    max-width: 500px;
+    overflow-wrap: normal;
     
 
   }
@@ -70,6 +69,7 @@
     font-size: 42px;
     line-height: 1.14;
     margin: 0 0 16px
+   
   }
 
   .add {
@@ -88,6 +88,9 @@
     background-color: inherit;
     border: none;
     cursor: pointer;
+    position: absolute;
+    top: 50%;
+    right: 0;
   }
   .add:hover{
     opacity: 0.6;
@@ -367,6 +370,7 @@
       display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: none;
     }
     .profile__name {
       font-size: 32px;
@@ -382,9 +386,10 @@
     }
     .add {
 
-      margin: 36px 0 0;
+    margin: 36px 0 0;
     background-image: url(/images/addButtonMobile.png);
     min-width: 282px;
+    position: unset;
 
     }
     .cards {
@@ -464,11 +469,9 @@
     margin: 36px 0 0;
     background-image: url(/images/addButtonMobile.png);
     min-width: 282px;
+    position: unset;
     
   }
- 
-
-
   .cards{
     display:flex;
     flex-direction: column;
