add: BEM folders and import

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,501 +1,47 @@
- 
-.page {
-    background-color: #000000;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
+@import url(/pages/normalize.css);
+@import url(/fonts/fonts.css);
 
-  .header {
-    max-width: 880px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 45px auto 5px;
-  }
-  
-  .header__logo {
-     max-width: 173px;
-     margin-bottom: 40px;
-  }
-  
-  .header__line {
-    
-    width: 100%;
-    opacity: 0.7;
-    border: 1px solid #545454;
-  }
-  
+@import url(/blocks/__page/page.css);
 
-  .profile {
-    display: flex;
-    width: 100%;
-    max-width: 880px;
-    margin-bottom: 30px;
-    position: relative;
-   
-  }
-  
-  .profile__picture {
-    width: 100px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-    margin-top: 35px;
-    min-width: 168px;
-    min-height: 120px;
-  }
-  .profile__data {
-    display: flex;
-   }
-  .profile__info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 60px;
-    max-width: 500px;
-    overflow-wrap: normal;
-    
+@import url(/blocks/__header/header.css);
+@import url(/blocks/__header/__line/header__line.css);
+@import url(/blocks/__header/__logo/header__logo.css);
 
-  }
-  .profile__name {
+@import url(/blocks/__profile/profile.css);
+@import url(/blocks/__profile/__picture/profile__picture.css);
+@import url(/blocks/__profile/__data/profile__data.css);
+@import url(/blocks/__profile/__info/profile__info.css);
+@import url(/blocks/__profile/__name/profile__name.css);
+@import url(/blocks/__profile/__edit/_btn/profile__edit_btn.css);
+@import url(/blocks/__profile/__text/profile__text.css);
 
-    padding-left: 20px;
-    font-weight: 500;
-    font-size: 42px;
-    line-height: 1.14;
-    margin: 0 0 16px
-   
-  }
+@import url(/blocks/add/add.css);
 
-  .add {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 125px;
-    align-self: center;
-    background-image: url(/images/Add-Button.png);
-    overflow: visible;
-    padding: 0;
-    background-repeat: no-repeat;
-    color: white;
-    width: 150px;
-    height: 50px;
-    background-color: inherit;
-    border: none;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    right: 0;
-  }
-  .add:hover{
-    opacity: 0.6;
-  }
-  
- 
-  
-  .profile__edit_btn {
-    
-    height: 24px;
-    margin-top: 15px;
-    margin-left: 18px;
-  }
-  .profile__edit_btn:hover{
-    opacity: 0.6;
-  }
-  
-  .profile__text {
-   
-    padding-left: 20px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    margin: 0;
+@import url(/blocks/__cards/cards.css);
 
-  }
-  
-  
+@import url(/blocks/__card/card.css);
+@import url(/blocks/__card/__image/card__image.css);
+@import url(/blocks/__card/__like/card__like.css);
+@import url(/blocks/__card/__like/_btn-off/card__like_btn-off.css);
+@import url(/blocks/__card/__like/_btn-on/card__like_btn-on.css);
+@import url(/blocks/__card/__title/card__title.css);
+@import url(/blocks/__card/__image/card__image.css);
+@import url(/blocks/__card/__bottom-bar/card__bottom-bar.css);
 
-  .add-btn {
-    cursor: pointer;
-    
-  }
+@import url(/blocks/__pop-up/pop-up.css);
 
-   
-   .cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 1.5%;
-    max-width: 880px;
-  
-  }
-  
-  .card {
-    background-color: white;
-    border-radius: 10px;
-  }
-  
-  .card__image {
-    width: 100%;
-   
-  }
-  .card__bottom-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0 5%;
+@import url(/blocks/__open-popup/open-popup.css);
 
-  }
-  .card__title {
-    
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    color:black;
-  }
-  
-  /* .card__like_btn{
-    color: black;
-    background-color: inherit;
-    border: none;
-  } */
+@import url(/blocks/__form/form.css);
+@import url(/blocks/__form/__close-btn/form__close-btn.css);
+@import url(/blocks/__form/__close/form__close.css);
+@import url(/blocks/__form/__title/form__title.css);
+@import url(/blocks/__form/__elements/form__elements.css);
+@import url(/blocks/__form/__username/form__username.css);
+@import url(/blocks/__form/__info/form__info.css);
+@import url(/blocks/__form/__line/form__line.css);
+@import url(/blocks/__form/__btn/form__btn.css);
+@import url(/blocks/__form/__save-btn/form__save-btn.css);
 
-  .card__like_btn-off{
-    width: 21px;
-    height: 19px;
-    color: black;
-    background-image: url(/images/like.png);
-    color: black;
-    background-color: inherit;
-    border: none;
-  }
-
-  .card__like_btn-on{
-    width: 21px;
-    height: 19px;
-    color: black;
-    background-image: url(/images/blackheart.png);
-    color: black;
-    background-color: inherit;
-    border: none;
-  }
-  .card__like_btn-on:hover{
-    opacity: 0.5;
-    cursor: pointer;
-  }
-  .card__like_btn-off:hover{
-    opacity: 0.5;
-    cursor: pointer;
-  }
-  /* .card__like {
-    width: 21px;
-   
-    color: black;
-  } */
-
-  .footer{
-    display:flex;
-    max-width: 880px;
-    width: 100%;
-    margin: 67px 0 60px;
-  }
-  .footer__text {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #545454;
-  
-    
-  }
-
-
-
-  .pop-up {
-    
-    display: none;
-    
-  }
-
-  .open-popup{
-    display: block;
-  }
-
-
-  .form__close-btn{
-    position: fixed;
-    top: 20%;
-    right: 20%;
-
-  
-  }
-  
-
-  .form__close:hover{
-    opacity: 0.6;
-  }
-  .form {
-    width: 430px;
-    padding: 34px 36px 36px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    
-   
-  }
-
-  
-   
-  .form__title {
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    color: #000000;
-    margin: 0;
-    
-  }
-
- 
-.form__title{
-  font-size: 18px;
-  line-height: 22px;
-}
-  
-  .form__elements {
-    display: flex;
-    flex-direction: column;
-    margin: 54px 0 0 ;
-  }
-  
-
-  
-  .form__username {
-    border: none;
-    padding: 0;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: #000000;
-    margin: 0 0 0;
-    
-  }
-  .form__username::placeholder {
-    color: black;
-  }
-  .form__info {
-    border: none;
-    width: 100%; 
-    padding: 0;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: #000000;
-    margin: 29px 0 0;
-  } 
-  .form__info::placeholder {
-    color: black;
-  }
-
-.form__line {
-    opacity: 0.2;
-    background-color: #000000;
-    margin-top: 14px;
-    height: 1px;
-}
-
-
-.form__btn {
-    margin: 48px auto 0;
-    width: 100%;
-    background: #000000;
-    border-radius: 2px;
-}
-
-
-
-.form__save-btn { 
-    background-color: black; /* Set the background color of the save button */
-      
-    padding: 10px 20px; /* Add some padding to the save button */
-    border-radius: 2px; /* Round the corners of the save button */
-    border: none; /* Remove the border from the save button */
-    cursor: pointer; 
-    margin: 0 auto;
-    width: 100%;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-
-    color: #FFFFFF;
-
-  }  
-  .form__btn:hover {
-  background: #000000;
-  opacity: 0.8;
-  border-radius: 2px;
-}
-
-
-
-  
-
-  @media only screen and (min-width: 544px) and (max-width: 1024px) {
-    /* Your styles for tablets go here */
-    .header__logo {
-      padding-left: 5%;
-      max-width: 20%;
-      margin-bottom: 32px;
-   }
-    .profile {
-      flex-direction: column;
-   padding: 0;
-    flex-wrap: wrap;
-    }
-    .profile__info {
-      margin-top: 40px;
-      display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: none;
-    }
-    .profile__name {
-      font-size: 32px;
-      padding: 0;
-    }
-    .profile__picture {
-      align-self: center;
-    }
-    .profile__edit_btn{
-      height: 24px;
-    margin-top: 10px;
-    margin-left: 18px;
-    }
-    .add {
-
-    margin: 36px 0 0;
-    background-image: url(/images/addButtonMobile.png);
-    min-width: 282px;
-    position: unset;
-
-    }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      grid-gap: 1.5%;
-      max-width: 880px;
-      margin: 0 3%
-    
-    }
-
-    .card__title {
-      font-size: 20px;
-    font-weight: bold;
-    margin-top: 20px;
-  }
-
-
-    .form__line{
-      margin-top: 9px;
-    } 
-    .form__close-btn {
-      top: 20%;
-      right: 10%;
-    }
-    .footer__text{
-      margin-left: 3%;
-    }
-
-  
-  }
-  @media only screen and (max-width: 543px) {
-  .header{
-    margin: 28px 0 0;
-  }
-  .header__logo{ 
-    margin: 0 0 32px 27px;
-    max-width: 130px;
-  }
-    .profile {
-      margin: 42px auto 36px;
-    flex-direction: column;
-    align-items: center;
-  }
-  .profile__picture {
-   
-    margin: 0 auto 26px;
-    min-width: 168px;
-    min-height: 127px;
-  }
-  .profile__info {
-   
-    margin: 0;
-    align-items: center;
-  }
-  .profile__name{
-    padding: 0;
-    font-size: 22px;
-    line-height: 0.8;
-    margin: 0 auto 14px;
-  }
-  .profile__text{
-    margin: 0 auto;
-    padding: 0;
-    font-size: 14px;
-    line-height: 17px;
-
-  }
-  .profile__edit{
-    margin: 0 0 14px 10px;
-  }
-  .profile__edit_btn{
-    margin: 0;
-  }
-  .add{
-    margin: 36px 0 0;
-    background-image: url(/images/addButtonMobile.png);
-    min-width: 282px;
-    position: unset;
-    
-  }
-  .cards{
-    display:flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 0 4% 50px;
-    }
-    .footer{
-      margin: 0 0 36px;
-    }
-    .footer__text{
-      margin: 0 0 0 3%; 
-      font-size: 14px;
-      line-height: 17px;
-    }
-    .form {
-      width: 300px;
-     
-    }
-    .form__close-btn {
-      top: 20%;
-      right: 10%;
-    
-    }
-  }
-
-  
-  
+@import url(/blocks/__footer/footer.css);
+@import url(/blocks/__footer/__text/footer__text.css);
