--- a/blocks/__header/header.css
+++ b/blocks/__header/header.css
@@ -1,8 +1,12 @@
 .header {
-    max-width: 880px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 45px auto 5px;
+  max-width: 880px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 45px auto 5px;
+}
+@media only screen and (max-width: 543px) {
+  .header {
+    margin: 28px 0 0;
   }
-  
+}
