fix: add folder image path

--- a/blocks/add/add.css
+++ b/blocks/add/add.css
@@ -4,7 +4,7 @@
   justify-content: center;
   margin-left: 125px;
   align-self: center;
-  background-image: url(/images/Add-Button.png);
+  background-image: url(../../images/Add-Button.png);
   overflow: visible;
   padding: 0;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
   only screen and (max-width: 543px) {
   .add {
     margin: 36px 0 0;
-    background-image: url(/images/addButtonMobile.png);
+    background-image: url(../../images/addButtonMobile.png);
     min-width: 282px;
     position: unset;
   }
