--- a/blocks/form/__username/form__username.css
+++ b/blocks/form/__username/form__username.css
@@ -1,12 +1,18 @@
 .form__username {
   border: none;
-  padding: 0;
+  padding: 0 0 14px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   color: #000000;
   margin: 0 0 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 .form__username::placeholder {
   color: black;
+}
+@media only screen and (min-width: 544px) and (max-width: 1024px) {
+  .form__username {
+    padding-top: 9px;
+  }
 }
