--- a/blocks/edit-btn/edit-btn.css
+++ b/blocks/edit-btn/edit-btn.css
@@ -1,12 +1,14 @@
 .edit-btn {
   height: 24px;
   width: 24px;
-  margin-top: 15px;
-  margin-left: 18px;
+  margin: 0;
   background-color: black;
   background-image: url(../../images/Edit-Btn.png);
   border: none;
   padding: 0;
+  position: absolute;
+  top: 33%;
+  right: 30%;
 }
 .edit-btn:hover {
   opacity: 0.6;
@@ -14,12 +16,13 @@
 @media only screen and (min-width: 544px) and (max-width: 1024px) {
   .edit-btn {
     height: 24px;
-    margin-top: 10px;
-    margin-left: 18px;
+    top: 63%;
+    right: 15%;
   }
 }
 @media only screen and (max-width: 543px) {
   .edit-btn {
-    margin: 0;
+    top: 57%;
+    right: 10%;
   }
 }
