FIX: path to img

--- a/blocks/heart-off/heart-off.css
+++ b/blocks/heart-off/heart-off.css
@@ -2,7 +2,7 @@
   width: 21px;
   height: 19px;
   color: black;
-  background-image: url(../../../../images/like.png);
+  background-image: url(../../images/like.png);
   color: black;
   background-color: inherit;
   border: none;
