--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,8 @@
 @import url(../blocks/form/__elements/form__elements.css);
 @import url(../blocks/form/__username/form__username.css);
 @import url(../blocks/form/__info/form__info.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__link-input/form__link-input.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
