--- a/blocks/form/__link-input/form__link-input.css
+++ b/blocks/form/__link-input/form__link-input.css
@@ -9,12 +9,12 @@
   margin: 29px 0 48px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-.form__input::placeholder {
+.form__link-input::placeholder {
   color: black;
 }
 @media only screen and (min-width: 544px) and (max-width: 1024px),
   only screen and (max-width: 543px) {
-  .form__input {
+  .form__link-input {
     padding: 0 0 9px;
   }
 }
