add: import add-popup to index.css

--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,5 @@
 @import url(../blocks/edit-btn/edit-btn.css);
 
 @import url(../blocks/save-btn/save-btn.css);
+
+@import url(../blocks/add-popup/add-popup.css);
