--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 1.5%;
+  grid-gap: 20px;
   max-width: 880px;
 }
 @media only screen and (min-width: 544px) and (max-width: 1024px) {
