--- a/blocks/card/__bottom-bar/card__bottom-bar.css
+++ b/blocks/card/__bottom-bar/card__bottom-bar.css
@@ -1,7 +1,5 @@
 .card__bottom-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  position: relative;
   margin: 0;
   padding: 0 5%;
 }
